[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lru_cache"
version = "1.0.0"
description = "Thread-safe LRU cache decorator with optional TTL expiration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "acmerfight", email = "acmerfight@gmail.com" }]
keywords = ["cache", "lru", "ttl", "thread-safe", "decorator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/acmerfight/lru_cache"
Repository = "https://github.com/acmerfight/lru_cache"
Issues = "https://github.com/acmerfight/lru_cache/issues"
Changelog = "https://github.com/acmerfight/lru_cache/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/lru_cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.coverage.run]
source = ["lru_cache"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
fail_under = 100
